@@ -15,7 +15,6 @@ declare -a SOURCES=(
   "src/document_model.scala"
   "src/document_view.scala"
   "src/documentation_dockable.scala"
-  "src/find_dockable.scala"
   "src/fold_handling.scala"
   "src/font_info.scala"
   "src/graphview_dockable.scala"
@@ -36,6 +35,7 @@ declare -a SOURCES=(
   "src/pretty_tooltip.scala"
   "src/process_indicator.scala"
   "src/protocol_dockable.scala"
+  "src/query_dockable.scala"
   "src/raw_output_dockable.scala"
   "src/rendering.scala"
   "src/rich_text_area.scala"
